CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(ARCH "linux64" CACHE STRING "Architecture: linux64, linux32, win32...")
SET(TARGET BouncingBall)
SET(SRCS    fmu2_model.c fmu2_model_cs.c )
SET(HEADERS fmu2_model.h fmu2_model_defines.h )

ADD_LIBRARY(${TARGET} SHARED ${SRCS} ${HEADERS})

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES PREFIX "")
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/../binaries/${ARCH}")

TARGET_LINK_LIBRARIES( ${TARGET} )

